# soroban-playground

./: .gitignore  API_MIGRATION_GUIDE.md  ARCHITECTURE.md  BUG_BOUNTY_DOCUMENTATION.md  CIRCUIT_BREAKER_IMPLEMENTATION.md  Cargo.toml  EVENT_FILTERING_IMPLEMENTATION.md  MERGE_CONFLICT_SUMMARY.md  MULTI_TENANT_IMPLEMENTATION.md  PR_MERGE_STATUS.md  RATE_LIMITING.md  README.md  REPUTATION_CONTRACT_IMPLEMENTATION.md  SYNTHETIC_ASSETS_DEPLOYMENT.md  SYNTHETIC_ASSETS_DOCS.md  SYNTHETIC_ASSETS_TESTING.md  complex_issues_list.md  create_all_issues.py  create_issues.py  create_issues.sh  create_labels.sh  created_issues.json  docker-compose.yml  merge_helper.sh  package-lock.json
.github/workflows/: backend-lint.yml  check-merge-conflicts.yml  secrets-scan.yml
backend/: .env.example  .eslintrc.json  TRACING.md  package-lock.json  package.json
backend/migrations/: 001_initial_schema.down.sql  001_initial_schema.up.sql  README.md  V002__add_rate_limiting.down.sql  V002__add_rate_limiting.up.sql  V003__synthetic_assets.down.sql  V003__synthetic_assets.up.sql
backend/src/: server.js  tracing.js  websocket.js
backend/tests/: load-test.js  (+16 more)
contracts/: README.md
contracts/amm-pool/: Cargo.toml
contracts/amm-pool/src/: lib.rs  storage.rs  test.rs  types.rs
contracts/amm-pool/test_snapshots/test/: test_add_liquidity_first_deposit.1.json  test_add_liquidity_proportional.1.json  test_default_fee_bps.1.json  test_double_init_fails.1.json  test_get_amount_out_preview.1.json  test_remove_liquidity.1.json  test_remove_liquidity_slippage_fails.1.json  test_swap_a_to_b.1.json  test_swap_invalid_token.1.json  test_swap_slippage_protection.1.json  test_swap_zero_liquidity_fails.1.json  test_twap_accumulates_after_swap.1.json
contracts/content-publishing/: Cargo.toml  README.md
contracts/content-publishing/src/: lib.rs  test.rs
contracts/content-publishing/test_snapshots/test/: admin_can_pause_and_unpause.1.json  cannot_self_tip_or_self_subscribe.1.json  duplicate_initialize_fails.1.json  end_to_end_publish_tip_subscribe_analytics.1.json  non_admin_cannot_pause.1.json  premium_view_after_expiry_fails.1.json  subscription_extends_when_renewing_active.1.json
contracts/cross-chain-bridge/: Cargo.toml
contracts/cross-chain-bridge/src/: lib.rs  storage.rs  test.rs  types.rs
contracts/cross-chain-bridge/test_snapshots/test/: test_confirm_mint_empty_hash_fails.1.json  test_confirm_mint_expired_deposit_fails.1.json  test_confirm_mint_marks_minted.1.json  test_confirm_mint_twice_fails.1.json  test_confirm_mint_unknown_relayer_fails.1.json  test_initialize_invalid_fee_fails.1.json  test_initialize_sets_admin.1.json  test_initialize_twice_fails.1.json  test_lock_creates_deposit.1.json  test_lock_daily_limit_exceeded_fails.1.json  test_lock_empty_destination_fails.1.json  test_lock_empty_token_fails.1.json  test_lock_sequential_ids.1.json  test_lock_when_paused_fails.1.json  test_lock_zero_amount_fails.1.json  test_non_admin_cannot_pause.1.json  test_refund_after_expiry.1.json  test_refund_already_minted_fails.1.json  test_refund_before_expiry_fails.1.json  test_refund_wrong_depositor_fails.1.json  test_set_fee_invalid_fails.1.json  test_set_fee_updates_value.1.json  test_set_relayer_registers_and_deregisters.1.json  test_stats_track_correctly.1.json
contracts/nft-amm/: Cargo.toml  README.md
contracts/nft-amm/src/: lib.rs  storage.rs  test.rs  types.rs
docs/: file-notary-guide.md
frontend/: jest.config.js  next.config.ts  package.json
indexer/: Cargo.toml
indexer/migrations/postgres/: 001_initial_schema.sql  003_audit_trail.sql
indexer/src/: main.rs  migrate.rs
indexer/src/audit/: merkle.rs  mod.rs
indexer/src/db/: mod.rs  postgres.rs  sqlite.rs  trait_.rs
indexer/src/graphql/: auth.rs  dataloaders.rs  mod.rs  schema.rs  types.rs
indexer/src/ws/: mod.rs
src/: backup_logic.rs  lib.rs
(+401 files in other folders)
