[package]
name = "soroban-playground-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "sqlite", "macros"] }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
aes-gcm = "0.10"
aead = "0.5"
aws-config = "0.55"
aws-sdk-s3 = "0.28"
chrono = "0.4"
tokio-util = { version = "0.7", features = ["io"] }
