[package]
name = "soroban-amm-pool"
version = "0.1.0"
edition = "2021"
description = "Automated Market Maker with constant-product formula, LP tokens, and TWAP oracle"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "21.0.6"

[dev-dependencies]
soroban-sdk = { version = "21.0.6", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
