[package]
name = "content-publishing"
version = "0.1.0"
edition = "2021"
description = "Decentralized Content Publishing Platform with Tip Jar and Subscriber Analytics"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "21.0.6"

[dev-dependencies]
soroban-sdk = { version = "21.0.6", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
