[package]
name = "soroban-nft-amm"
version = "0.1.0"
edition = "2021"
description = "NFT AMM with dynamic bonding curve pricing, collection pools, and analytics"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "21.0.6"

[dev-dependencies]
soroban-sdk = { version = "21.0.6", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
